<resources>
    <string name="app_name">birds-of-a-feather-cse-110-team-33</string>
    <string name="enter_name">Please enter your name</string>
    <string name="default_name">James</string>
    <string name="confirm">Confirm Name</string>
    <string name="current_qtr">Winter</string>

    <string-array name="quarters">
        <item>Winter</item>
        <item>Spring</item>
        <item>Summer 1</item>
        <item>Summer 2</item>
        <item>SSS</item>
        <item>Fall</item>
    </string-array>

    <string-array name="years">
        <item>2016</item>
        <item>2017</item>
        <item>2018</item>
        <item>2019</item>
        <item>2020</item>
        <item>2021</item>
        <item>2022</item>
    </string-array>

    <string-array name="class_size">
        <item>Tiny (&lt;40)</item>
        <item>Small (40-75)</item>
        <item>Medium (75-150)</item>
        <item>Large (150-250)</item>
        <item>Huge (250-400)</item>
        <item>Gigantic (400+)</item>
    </string-array>

    <string-array name="saved_sessions_list">
    </string-array>

    <string-array name="filters">
        <item>Total Shared Classes</item>
        <item>Current Shared Classes</item>
        <item>Class Size</item>
        <item>Recency</item>

    </string-array>
</resources>